fix: CORS 허용 오리진 환경변수화 (운영 IP 지원)
- app.cors.allowed-origins 프로퍼티로 오리진 주입 (콤마 구분)
- 기본값: localhost:5173,5174 (로컬 개발 영향 없음)
- 운영: configs/apigateway-service-prod.yml에서 3.38.93.94:5173,5174 주입

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>